fix: CSS middle align device name label better visual

--- a/src/src/main/webapp/resources/elements/device-parallel-coordinates/device-parallel-coordinates.scss
+++ b/src/src/main/webapp/resources/elements/device-parallel-coordinates/device-parallel-coordinates.scss
@@ -77,7 +77,6 @@ device-pagination {
   &.label {
     font-size: 1rem;
     text-transform: uppercase;
-    text-anchor: end;
   }
 
   &.title {
